src/objects/Partner_Structure__c.object
<CustomObject>
    <description>LPAM - These are the partners that make up this project. They will be attached to Equity Investments.</description>
    <fields>
        <fullName>Account_Business_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account/Business Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Structures</relationshipLabel>
        <relationshipName>Partner_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Business_Entity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Structures</relationshipLabel>
        <relationshipName>Partner_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Project__c</fullName>
        <label>Associated Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Partner Structures</relationshipLabel>
        <relationshipName>Partner_Structures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Type__c</fullName>
        <label>Partner Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Managing</fullName>
                </value>
                <value>
                    <fullName>Co-Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Partner</fullName>
                </value>
                <value>
                    <fullName>Limited Partner</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Property Management Company</fullName>
                </value>
                <value>
                    <fullName>Asset Management Company</fullName>
                </value>
                <value>
                    <fullName>Asset/Property Management Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Business_Entity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Structures (Property Manager)</relationshipLabel>
        <relationshipName>Partner_Structures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees</label>
        <summarizedField>Partner_Fee__c.Amount__c</summarizedField>
        <summaryForeignKey>Partner_Fee__c.Partner_Fee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Partner Structure</label>
    <nameField>
        <displayFormat>PStr-{00000}</displayFormat>
        <label>PartnerStructureID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>